--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 					<header>
 						<h2>Achievements</h2>
 						<u1>
-							<li>3 stars in python on HackerRank</li>
-							<li>2 stars in java on HackerRank</li>
-							<li>2 stars in python on HackerRank</li>
+							<li>3 stars in Python on HackerRank</li>
+							<li>2 stars in Java on HackerRank</li>
+							<li>2 stars in C++ on HackerRank</li>
 						</u1>
 					</header>
 
